--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,17 +19,16 @@ services:
         source: /media/golbat/Media/Shows
         target: /shows
     restart: "unless-stopped"
-
-  homeassistant:
-    container_name: homeassistant
-    image: "ghcr.io/home-assistant/home-assistant:stable"
-    volumes:
-      - homeassistant-config:/config
-      - /etc/localtime:/etc/localtime:ro
-      - /run/dbus:/run/dbus:ro
-    restart: unless-stopped
-    privileged: true
-    network_mode: host
+#  homeassistant:
+#    container_name: homeassistant
+#    image: "ghcr.io/home-assistant/home-assistant:stable"
+#    volumes:
+#      - homeassistant-config:/config
+#      - /etc/localtime:/etc/localtime:ro
+#      - /run/dbus:/run/dbus:ro
+#    restart: unless-stopped
+#    privileged: true
+#    network_mode: host
 
   qbittorrent:
     image: lscr.io/linuxserver/qbittorrent:latest
@@ -52,27 +51,27 @@ services:
       - 6881:6881
       - 6881:6881/udp
     restart: unless-stopped
-  wg-easy:
-    environment:
-      - LANG=en
-      - WG_HOST=debain.duckdns.org
-      - PASSWORD_HASH=$$2a$$12$$mHqvUP7UDU8T6Vm5D26PHuSeFkIaWerhvie/RXl2xBTtGPdo9GBFK
-      - PORT=51821
-      - WG_PORT=51820
-    image: ghcr.io/wg-easy/wg-easy
-    container_name: wg-easy
-    volumes:
-      - wireguard-data:/etc/wireguard
-    ports:
-      - "51820:51820/udp"
-      - "51821:51821/tcp"
-    restart: unless-stopped
-    cap_add:
-      - NET_ADMIN
-      - SYS_MODULE
-    sysctls:
-      - net.ipv4.ip_forward=1
-      - net.ipv4.conf.all.src_valid_mark=1
+#  wg-easy:
+#    environment:
+#      - LANG=en
+#      - WG_HOST=debain.duckdns.org
+#      - PASSWORD_HASH=$$2a$$12$$mHqvUP7UDU8T6Vm5D26PHuSeFkIaWerhvie/RXl2xBTtGPdo9GBFK
+#      - PORT=51821
+#      - WG_PORT=51820
+#    image: ghcr.io/wg-easy/wg-easy
+#    container_name: wg-easy
+#    volumes:
+#      - wireguard-data:/etc/wireguard
+#    ports:
+#      - "51820:51820/udp"
+#      - "51821:51821/tcp"
+#    restart: unless-stopped
+#    cap_add:
+#      - NET_ADMIN
+#      - SYS_MODULE
+#    sysctls:
+#      - net.ipv4.ip_forward=1
+#      - net.ipv4.conf.all.src_valid_mark=1
   homepage:
     image: ghcr.io/gethomepage/homepage:latest
     container_name: homepage
